<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_marginTop="30dp"
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:paddingHorizontal="16dp"
        app:elevation="0dp">

        <com.jem.blobbackground.layout.BlobFrameLayout
            android:id="@+id/blobFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/app_icon_main" />
        </com.jem.blobbackground.layout.BlobFrameLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_marginTop="20dp"
                android:paddingHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/fruit_list_home"
                    android:textAppearance="@style/TextAppearance.FreshMate.Headline2" />

                <Button
                    android:id="@+id/btnViewAllFruitList"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/view_all"
                    android:textAppearance="@style/TextAppearance.FreshMate.BodyMedium"
                    android:textColor="@color/md_theme_onTertiaryFixedVariant" />

            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPreviewFruit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                tools:listitem="@layout/home_preview_card"
                android:orientation="vertical" />

            <FrameLayout
                android:layout_marginTop="20dp"
                android:paddingHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/diseases_fruit_home"
                    android:textAppearance="@style/TextAppearance.FreshMate.Headline2" />

                <Button
                    android:id="@+id/btnViewAllDisease"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/view_all"
                    android:textAppearance="@style/TextAppearance.FreshMate.BodyMedium"
                    android:textColor="@color/md_theme_onTertiaryFixedVariant" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPreviewDiseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="120dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                tools:listitem="@layout/home_preview_card"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
    <!--    <ProgressBar-->
    <!--        android:id="@+id/LoadingWait"-->
    <!--        style="?android:attr/progressBarStyle"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:visibility="visible" />-->